# mlrs

./: .gitignore  Cargo.toml  GUIDE.md  LIBRARY.md  RESOURCES.md
benches/: accelerate_vs_metal_bench.rs  matmul_bench.rs  metal_bench.rs  tile_3d_bench.rs  tile_size_bench.rs
src/: lib.rs  main.rs  nn.rs  optim.rs  tensor.rs
src/nn/: linear.rs  loss.rs  mod.rs  nn.rs  optim.rs
src/tensor/: core.rs  mod.rs  ops.rs  tensor.rs
src/tensor/kernels/: amx_gemm.rs  backend.rs  cpu_gemm.rs  gemm.rs  metal_gemm.rs  mod.rs
tests/: integration_test.rs
