[package]
name = "rust_nn"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_nn"
path = "src/lib.rs"

[[bin]]
name = "train"
path = "src/main.rs"
required-features = []

[[bin]]
name = "matmul_bench"
path = "benches/matmul_bench.rs"

[[bin]]
name = "tile_size_bench"
path = "benches/tile_size_bench.rs"

[[bin]]
name = "tile_3d_bench"
path = "benches/tile_3d_bench.rs"

[[bin]]
name = "metal_bench"
path = "benches/metal_bench.rs"

[features]
default = ["metal"]
metal = ["dep:objc2-metal", "dep:objc2-metal-performance-shaders", "dep:objc2-foundation", "dep:objc2"]

[dependencies]
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-chrome = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", optional = true }
objc2-metal = { version = "0.3.2", optional = true }
objc2-metal-performance-shaders = { version = "0.3.2", features = ["MPSMatrix"], optional = true }
objc2-foundation = { version = "0.3.2", optional = true }
